# SPlay

./: .gitignore  CMakeLists.txt  HOWTO.txt  NOTE.txt  README.md
cmake/: FindTagLib.cmake  FindTaglib.cmake
include/: Application.h  Aux.h  Common.h  Logger.h  MainWindow.h  PlaybackControlButton.h  PlaylistModel.h  PlaylistView.h  PlaylistViewDelegate.h  Settings.h  Slider.h  TableViewDelegate.h  TableWgt.h  Track.h  Types.h  Utils.h  VolumeButton.h  VolumeWidget.h
include/spdlog/details/: async_log_helper.h
res/: SPlay.qrc
script/: clean.cmd  win_vc12_x86.cmd  win_vc14_x86.cmd
src/: Application.cpp  Aux.cpp  Logger.cpp  MainWindow.cpp  PlaylistModel.cpp  PlaylistView.cpp  PlaylistViewDelegate.cpp  Slider.cpp  TableViewDelegate.cpp  TableWgt.cpp  Track.cpp  Utils.cpp  VolumeButton.cpp  VolumeWidget.cpp  main.cpp
src/cppformat/: format.cc
